package token.types;

public enum TokenValueType implements TokenType {
  STRING,
  NUMBER,
  /*FLOAT,
  BOOLEAN,
   */
}
