package token;

public enum TokenType {
    ADD_OPERATION,
    SUB_OPERATION,
    MUL_OPERATION,
    DIV_OPERATION,
    PUBLIC_KEYWORD,
    FINAL_KEYWORD,
    STRING_TYPE,
    INTEGER_TYPE,
    FLOAT_TYPE,
    BOOLEAN_TYPE,
    IDENTIFIER,
    ASSIGNATION,
    STRING,
    INTEGER,
    FLOAT,
    BOOLEAN,
    SEMICOLON,
    DECLARATION,
    SYNTAX
}
