package token.tokenTypes;

public enum TokenDataType implements TokenType {
    STRING_TYPE,
    INTEGER_TYPE,
    FLOAT_TYPE,
    BOOLEAN_TYPE,

}
