package token.tokenTypes;

public enum TokenOperandType implements TokenType {
    ADD_OPERATION,
    SUB_OPERATION,
    MUL_OPERATION,
    DIV_OPERATION,
}
