package token.types;

public enum TokenTagType implements TokenType {
  /*
  PUBLIC_KEYWORD,
  FINAL_KEYWORD,
   */
  IDENTIFIER,
  ASSIGNATION,
  SEMICOLON,
  DECLARATION,
  SYNTAX,
  INVALID,
  OPEN_PARENTHESIS,
  CLOSE_PARENTHESIS,
  COMMA
}
